--- a/package.json
+++ b/package.json
@@ -9,9 +9,34 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@hookform/resolvers": "^5.2.2",
+    "@prisma/client": "^5.22.0",
+    "@radix-ui/react-dialog": "^1.1.15",
+    "@radix-ui/react-label": "^2.1.8",
+    "@radix-ui/react-scroll-area": "^1.2.10",
+    "@radix-ui/react-slot": "^1.2.4",
+    "@types/adm-zip": "^0.5.7",
+    "@types/nodemailer": "^7.0.4",
+    "@types/pdf-parse": "^1.1.5",
+    "@types/pdfkit": "^0.17.4",
+    "@types/uuid": "^10.0.0",
+    "adm-zip": "^0.5.16",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "jspdf": "^3.0.4",
+    "lucide-react": "^0.561.0",
     "next": "16.0.10",
+    "nodemailer": "^7.0.11",
+    "openai": "^6.14.0",
+    "pdf-parse": "^2.4.5",
+    "prisma": "^5.22.0",
     "react": "19.2.1",
-    "react-dom": "19.2.1"
+    "react-dom": "19.2.1",
+    "react-hook-form": "^7.68.0",
+    "tailwind-merge": "^3.4.0",
+    "twilio": "^5.10.7",
+    "uuid": "^13.0.0",
+    "zod": "^4.2.1"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
@@ -21,6 +46,7 @@
     "eslint": "^9",
     "eslint-config-next": "16.0.10",
     "tailwindcss": "^4",
+    "tw-animate-css": "^1.4.0",
     "typescript": "^5"
   }
 }
