--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react": "19.2.1",
     "react-dom": "19.2.1",
     "react-hook-form": "^7.68.0",
+    "resend": "^6.6.0",
     "tailwind-merge": "^3.4.0",
     "twilio": "^5.10.7",
     "uuid": "^13.0.0",
