--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "adm-zip": "^0.5.16",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "dotenv": "^17.2.3",
     "jspdf": "^3.0.4",
     "lucide-react": "^0.561.0",
     "next": "16.0.10",
