--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@radix-ui/react-label": "^2.1.8",
     "@radix-ui/react-scroll-area": "^1.2.10",
     "@radix-ui/react-slot": "^1.2.4",
+    "@sparticuz/chromium": "^143.0.0",
     "@types/adm-zip": "^0.5.7",
     "@types/nodemailer": "^7.0.4",
     "@types/pdf-parse": "^1.1.5",
@@ -23,6 +24,7 @@
     "adm-zip": "^0.5.16",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "docx": "^9.5.1",
     "dotenv": "^17.2.3",
     "jspdf": "^3.0.4",
     "lucide-react": "^0.561.0",
@@ -31,6 +33,7 @@
     "openai": "^6.14.0",
     "pdf-parse": "^2.4.5",
     "prisma": "^5.22.0",
+    "puppeteer-core": "^24.34.0",
     "react": "19.2.1",
     "react-dom": "19.2.1",
     "react-hook-form": "^7.68.0",
