--- a/vercel.json
+++ b/vercel.json
@@ -2,7 +2,7 @@
     "crons": [
         {
             "path": "/api/cron/daily-sourcing",
-            "schedule": "0 0 * * *"
+            "schedule": "0 */12 * * *"
         }
     ]
 }
