--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@types/pdf-parse": "^1.1.5",
     "@types/pdfkit": "^0.17.4",
     "@types/uuid": "^10.0.0",
+    "@vercel/blob": "^2.0.0",
     "adm-zip": "^0.5.16",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
