--- a/package.json
+++ b/package.json
@@ -36,8 +36,8 @@
     "pdf-parse": "^2.4.5",
     "prisma": "^5.22.0",
     "puppeteer-core": "^24.34.0",
-    "react": "19.2.1",
-    "react-dom": "19.2.1",
+    "react": "^19.2.3",
+    "react-dom": "^19.2.3",
     "react-hook-form": "^7.68.0",
     "resend": "^6.6.0",
     "tailwind-merge": "^3.4.0",
